# ESE5190-Final-Project

./: .gitignore  README.md
Falling_Piano_Tiles/: A_major.h  CMakeLists.txt  E_major.h  falling_tiles.c  sample.h
Joystick/: CMakeLists.txt
Testing/Joystick/: joystick_display.c
Testing/VGA_Animate_HSEQ/: mandelbrot_fixvfloat.c
Testing/VGA_Audio_Final/: mandelbrot_fixvfloat.c  pico-pwm-audio.c
Testing/VGA_Audio_Integrate/: CMakeLists.txt
Testing/VGA_Intercept_Tiles/: mandelbrot_fixvfloat.c
Testing/VGA_Mandelbrot_Set/: vga_graphics.h
Testing/pico_pwm_example/: pwm.c
Testing/sound_test/: CMakeLists.txt  sound_pwm.pio
VGA_Animate_HSEQ/: CMakeLists.txt  mandelbrot_fixvfloat.c  vga_graphics.h
VGA_Audio_Final/: B_major.h
VGA_Audio_Integrate/: CMakeLists.txt  Din-2.h  Din_2.h  Na-2.h  Na_2.h  Tin-2.h  Tin_2.h  mandelbrot_fixvfloat.c
VGA_Audio_Integrate_2/: CMakeLists.txt  din.h  mandelbrot_fixvfloat.c
VGA_Intercept_Tiles/: CMakeLists.txt  mandelbrot_fixvfloat.c
VGA_Joystick/: mandelbrot_fixvfloat.c
VGA_Mandelbrot_Set/: CMakeLists.txt
VGA_Test_Draw/: mandelbrot_fixvfloat.c
pico_pwm_example/: CMakeLists.txt  pwm.pio
sound_test/: sound_pwm.c  sound_pwm.pio
